--- a/devstack-k2k/Vagrantfile
+++ b/devstack-k2k/Vagrantfile
@@ -6,11 +6,11 @@ require 'vagrant-openstack-provider'
 # script to deploy devstack kilo
 $script_devstack = <<SCRIPT
 # prep env and git clone
-sudo apt-get update 
-sudo apt-get install -y git vim 
+sudo apt-get update
+sudo apt-get install -y git vim
 git clone https://github.com/openstack-dev/devstack.git devstack
 cd devstack
-git checkout stable/kilo
+git checkout stable/liberty
 # Build DevStack
 sudo cp samples/local.conf .
 sudo chown -R ubuntu ../devstack
@@ -47,15 +47,15 @@ CONF = _config
 
 # Override vagrant configurations using environment variables
 keys = CONF.keys
-keys.each do |k| 
+keys.each do |k|
   if ENV[k.upcase] != nil then
      puts "Overide from environment variable: " + k.upcase + " = " + ENV[k.upcase]
      if /^\d+/.match(ENV[k.upcase])
         CONF[k] = Integer(ENV[k.upcase])
      else
         CONF[k] = ENV[k.upcase]
-     end 
-  end 
+     end
+  end
 end
 
 # get variables from vagrantconfig.yaml
@@ -76,7 +76,7 @@ Vagrant.configure(2) do |config|
 
     # define os instance
     devstack.vm.provider :openstack do |os|
-      os.openstack_auth_url   = auth_url + "/tokens" 
+      os.openstack_auth_url   = auth_url + "/tokens"
       os.username             = ENV['OS_USERNAME']
       os.password             = ENV['OS_PASSWORD']
       os.tenant_name          = ENV['OS_TENANT_NAME']
